# sp1-evm

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile.sp1-app  Dockerfile.sp1-base  README.md
crates/core/src/executor/: mod.rs
crates/morph-executor/: Cargo.toml
crates/morph-executor/src/: lib.rs
crates/primitives/src/: lib.rs
crates/primitives/src/types/: mod.rs
crates/stateless-block-verifier/: Cargo.toml
crates/stateless-block-verifier/src/: block_trace.rs  chunk.rs  error.rs  hardfork.rs  lib.rs
crates/stateless-block-verifier/src/executor/: builder.rs  mod.rs
crates/stateless-block-verifier/src/utils/: debug.rs  mod.rs
crates/stateless-block-verifier/src/utils/ext/: mod.rs
crates/stateless-block-verifier/src/utils/ext/imp/: archived_block_trace_v2.rs  blanket.rs  block_trace.rs  block_trace_v2.rs  mod.rs
elf/: riscv32im-succinct-zkvm-elf
lib/: Cargo.toml
lib/src/: chunk.rs  lib.rs
lib/src/executor/: mod.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
testdata/: dev_tx.json  mainnet_batch_traces.json
