[package]
version = "0.1.0"
name = "evm-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
serde_json = { workspace = true }
sp1-zkvm =  { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0830" }
evm-lib = { path = "../lib" }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits", features = ["scroll"], branch = "feat/sp1" }
anyhow = { version = "1.0", optional = true }
tokio = { version = "1", default-features = false, optional = true }
#serde_json = { version = "1.0", optional = true }
serde = { version = "1.0.207", optional = true }
