[package]
version = "0.1.0"
name = "evm-script"
edition = "2021"
default-run = "revm"

[[bin]]
name = "revm"
path = "src/bin/main.rs"
required-features = ["bin-deps"]
[features]
bin-deps = [
    "anyhow",
    "tokio",
]

# features = ["tokio","anyhow"]


[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
# sp1-sdk = "1.1.0"
sp1-sdk = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0807" }

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
evm-lib = { path = "../lib" }
eth-types = { git = "https://github.com/scroll-tech/zkevm-circuits", features = ["scroll"], branch = "feat/sp1" }
anyhow = { version = "1.0", optional = true }
tokio = { version = "1", default-features = false, optional = true }


[build-dependencies]
sp1-helper = "1.1.0"
